css/style.css
html,body,h1,h2,h3,h4,p {
    font-family: 'IBM Plex Mono', monospace;
  }

.navbar {
    box-shadow: none !important;
}

html {
  scroll-behavior: smooth;
}



/* ---- particles ---- */

body {
    margin: 0;
    font:normal 75% Arial, Helvetica, sans-serif;
  }
  
  canvas {
    display: block;
    vertical-align: bottom;
  }
  
  /* ---- particles.js container ---- */
  
  #particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #96bfff;
    background-image: url("");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
  }
  
  /* ---- stats.js ---- */
  
  .count-particles{
    background: #000022;
    position: absolute;
    top: 48px;
    left: 0;
    width: 80px;
    color: #13E8E9;
    font-size: .8em;
    text-align: left;
    text-indent: 4px;
    line-height: 14px;
    padding-bottom: 2px;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: bold;
  }
  
  .js-count-particles{
    font-size: 1.1em;
  }
  
  #stats,
  .count-particles{
    -webkit-user-select: none;
  }
  
  #stats{
    border-radius: 3px 3px 0 0;
    overflow: hidden;
  }
  
  .count-particles{
    border-radius: 0 0 3px 3px;
  }

